--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				</div>
 				<h4>Faculty of Computing Management</h4>
 				<p>The main focus of this webi s to manage and display data for all departments within the Faculty of Computing, including Information Technology, Information Systems, Visual Communication Design, and Interior Design.</p>
-				<a href="D:/Tara Dapa Betung/Semester 1/Web Programming 20221/Real Project/Page 1/Page1.html">
+				<a href="Web Project/Page 1/Page1.html">
 					Live Demo
 					<i class="ri-arrow-right-line"></i>
 				</a>
